# video-text

./: CHANGELOG.txt  __init__.py  lisense.txt  pyproject.toml  readme.md  readme.txt  setup.py  test_transcription.py
